<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.c2c_online_shop.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.c2c_online_shop.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_dashboard"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_wallet"
            app:destination="@id/navigation_wallet" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.c2c_online_shop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.c2c_online_shop.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.c2c_online_shop.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.c2c_online_shop.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" >
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_deposit"
            app:destination="@id/navigation_deposit" />
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_withdraw"
            app:destination="@id/navigation_withdraw" />
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_products"
            app:destination="@id/navigation_products" />
        <action
            android:id="@+id/action_navigation_wallet_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.c2c_online_shop.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_navigation_orders_to_navigation_order"
            app:destination="@id/navigation_order" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.c2c_online_shop.ui.orders.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" >
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.c2c_online_shop.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_products_to_navigation_create_product"
            app:destination="@id/navigation_create_product" />
        <action
            android:id="@+id/action_navigation_products_to_navigation_edit_product"
            app:destination="@id/navigation_edit_product" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_product"
        android:name="com.example.c2c_online_shop.ui.products.CreateProductFragment"
        android:label="@string/title_create_product"
        tools:layout="@layout/fragment_create_product" />

    <fragment
        android:id="@+id/navigation_edit_product"
        android:name="com.example.c2c_online_shop.ui.products.EditProductFragment"
        android:label="@string/title_edit_product"
        tools:layout="@layout/fragment_edit_product" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.c2c_online_shop.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_deposit"
        android:name="com.example.c2c_online_shop.ui.deposit.DepositFragment"
        android:label="@string/title_deposit"
        tools:layout="@layout/fragment_deposit" />

    <fragment
        android:id="@+id/navigation_withdraw"
        android:name="com.example.c2c_online_shop.ui.withdraw.WithdrawFragment"
        android:label="@string/title_withdraw"
        tools:layout="@layout/fragment_withdraw" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.c2c_online_shop.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />
</navigation>
